@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-20-2005 fixed: clockspeed used for DreamX 1480 was somewhat of. Correct value is 1481.20000Mhz as per FriendTech info.
  - 02-10-2005 fixed: my music keeps its settings.  (buttons need to reference ID 5, not 501.)
  - 02-10-2005 added: Video items found in locked bookmarks are hidden from My Videos database views (Title, Genre, Actor, Year) until the bookmark is unlocked from My Videos Files view or by Master User Mode
  - 30-09-2005 added: WA51-presets(265).zip, now default Presetpack in Milkdrop. Contains presets 20fps > faster (tested in PAL720x576)
